# HH_Parser

./: .gitignore  README.md  pyproject.toml
src/: hh.py  main.py  parser.py  user_interface.py  vacancy.py
src/file_workers/: JSON_worker.py  file_worker.py
src/parsers/: hh.py  parser.py
tests/: conftest.py  resp_page_0.json  resp_page_1.json  test.json  test_file_workers.py  test_hh.py  test_user_interface.py  test_vacancy.py
